src/objects/Star_ProgrammKampagne__c.object
<CustomObject>
    <fields>
        <fullName>Star_BMV__c</fullName>
        <label>BMV</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Star_Ende__c</fullName>
        <label>Ende</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Star_GesamttrailerlaengeInSekunden__c</fullName>
        <label>Gesamttrailerlänge (in Sekunden)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_KundenanteilSpotlaengeInSekunden__c</fullName>
        <label>Kundenanteil Spotlänge (in Sekunden)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Star_Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Programm Kampagnen</relationshipLabel>
        <relationshipName>Star_ProgrammKampagnen</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Star_Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Star_Sender__c</fullName>
        <label>Sender</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ProSieben</fullName>
                </value>
                <value>
                    <fullName>Sat.1</fullName>
                </value>
                <value>
                    <fullName>Kabel eins</fullName>
                </value>
                <value>
                    <fullName>Sixx</fullName>
                </value>
                <value>
                    <fullName>ProSieben maxx</fullName>
                </value>
                <value>
                    <fullName>Sat.1 Gold</fullName>
                </value>
                <value>
                    <fullName>Kabel eins Doku</fullName>
                </value>
                <value>
                    <fullName>ProSieben Fun</fullName>
                </value>
                <value>
                    <fullName>Sat.1 Emotions</fullName>
                </value>
                <value>
                    <fullName>Kabel eins Classics</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Star_SpotKundenintegrationsantel__c</fullName>
        <formula>Star_KundenanteilSpotlaengeInSekunden__c /  Star_GesamttrailerlaengeInSekunden__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Spot Kundenintegrationsantel</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Star_Start__c</fullName>
        <label>Start</label>
        <type>Date</type>
    </fields>
    <label>Programm Kampagne</label>
    <nameField>
        <label>Programm Kampagne Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Programm Kampagnen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>